; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_dell-rbtn.c_rbtn_rfkill_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_dell-rbtn.c_rbtn_rfkill_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { %struct.rbtn_data* }
%struct.rbtn_data = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_device*)* @rbtn_rfkill_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rbtn_rfkill_event(%struct.acpi_device* %0) #0 {
  %2 = alloca %struct.acpi_device*, align 8
  %3 = alloca %struct.rbtn_data*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %2, align 8
  %4 = load %struct.acpi_device*, %struct.acpi_device** %2, align 8
  %5 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %4, i32 0, i32 0
  %6 = load %struct.rbtn_data*, %struct.rbtn_data** %5, align 8
  store %struct.rbtn_data* %6, %struct.rbtn_data** %3, align 8
  %7 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %8 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.rbtn_data*, %struct.rbtn_data** %3, align 8
  %13 = getelementptr inbounds %struct.rbtn_data, %struct.rbtn_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.acpi_device*, %struct.acpi_device** %2, align 8
  %16 = call i32 @rbtn_rfkill_query(i64 %14, %struct.acpi_device* %15)
  br label %17

17:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @rbtn_rfkill_query(i64, %struct.acpi_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
